Update 'kalp7z9pg-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:def943272a4cfe725293ebba4c1a65a9907201b7@sha256:8af52a5a80c38dcc6f5718398fc6159ad2f7dc9fa1a6b9b071240ee0d4d0c31e

--- a/components/kalp7z9pg-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/kalp7z9pg-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: kalp7z9pg-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:def943272a4cfe725293ebba4c1a65a9907201b7@sha256:8af52a5a80c38dcc6f5718398fc6159ad2f7dc9fa1a6b9b071240ee0d4d0c31e
+          name: container-image
